# calibraq

./: .env.example  .gitignore  PROJECT_STATE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
app/analysis/: __init__.py  drift.py  health.py  series.py
app/calibration/: __init__.py  loaders.py  models.py
app/collector/: __init__.py  ibm.py  mock.py  persist.py
app/layout/: __init__.py  backend_shim.py  circuits.py  runner.py  selection.py  validation.py
app/storage/: __init__.py  db.py  tables.py
app/utils/: timeutils.py
scripts/: collect_ibm.py  generate_mock.py  run_analysis.py  select_layout.py  smoke_phase1.sh  smoke_phase2.sh  smoke_phase3.sh
tests/: conftest.py  test_drift.py  test_health.py  test_ibm_normalize.py  test_idempotency.py  test_layout.py  test_mock_sanity.py  test_models_roundtrip.py
